# server/doc/swagger.yaml
@@ -7,7 +7,36 @@ info:
   title: ggeco
   version: 1.1.0
 paths:
-  /app/signin:
+  /app/auth/refresh:
+    post:
+      description: Refresh Access Token
+      parameters:
+      - in: header
+        name: Authorization
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppRefreshResponse'
+          description: OK
+        "400":
+          content:
+            text/plain:
+              schema:
+                type: string
+          description: Bad Request
+        "500":
+          content:
+            text/plain:
+              schema:
+                type: string
+          description: Internal Server Error
+      summary: Refresh Access Token
+  /app/auth/signin:
     post:
       description: Sign in with OAuth2
       requestBody:
@@ -37,6 +66,11 @@ paths:
       summary: Sign in with OAuth2
 components:
   schemas:
+    AppRefreshResponse:
+      properties:
+        access_token:
+          type: string
+      type: object
     AppSignInRequest:
       properties:
         access_token:
